--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,22 @@
       "port": 9219,
       "webRoot": "${workspaceFolder}",
       "url": "http://127.0.0.1:49503/p/moneyhub-nodejs/gender-checker.html?_cmAuth\u003dkftcdjrgej"
+    },
+    {
+      "name": "Launch Chrome 127.0.0.1 (2)",
+      "type": "chrome",
+      "request": "launch",
+      "port": 9242,
+      "webRoot": "${workspaceFolder}",
+      "url": "http://127.0.0.1:49503/p/moneyhub-nodejs/loop.html?_cmAuth\u003dkftcdjrgej"
+    },
+    {
+      "name": "Launch Chrome 127.0.0.1 (3)",
+      "type": "chrome",
+      "request": "launch",
+      "port": 9257,
+      "webRoot": "${workspaceFolder}",
+      "url": "http://127.0.0.1:49503/p/moneyhub-nodejs/object.html?_cmAuth\u003dkftcdjrgej"
     }
   ]
 }
